asteroideaParser.py
# Generated from asteroidea.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class asteroideaParser ( Parser ):

    grammarFileName = "asteroidea.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'&&'", "'[===]'", "'[%%%]'", "'#'", "'##'", 
                     "':='", "'['", "'-'", "']'", "'?'", "'!?'", "'??'", 
                     "'!??'", "'&'", "'*'", "'('", "')'", "'@'", "'^'", 
                     "'+'", "'~'", "'$'", "'<'", "','", "'>'", "'|'", "'^^'", 
                     "'<-'", "'->'", "'<<'", "'>>'", "'=>'", "'<='", "'<>'", 
                     "'%>'", "'<%'", "'<%>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "MOVE_LEFT_OP", "MOVE_RIGHT_OP", "MOVE_START_OP", 
                      "MOVE_END_OP", "READ_CHAR_OP", "PRINT_CHAR_OP", "PRINT_MOVE_CHAR_OP", 
                      "READ_INT_OP", "PRINT_INT_OP", "PRINT_MOVE_INT_OP", 
                      "NUM", "STRING", "IDENTIFIER", "WS", "COMMENT" ]

    RULE_prog = 0
    RULE_stmt = 1
    RULE_debugOp = 2
    RULE_importStatement = 3
    RULE_showTapeBytesOp = 4
    RULE_showTapeValsOp = 5
    RULE_setTapeOp = 6
    RULE_setTapeCellsOp = 7
    RULE_setTapeLengthOp = 8
    RULE_setTapeStringOp = 9
    RULE_setVarOp = 10
    RULE_loopStatement = 11
    RULE_repeatStatement = 12
    RULE_whileStatement = 13
    RULE_untilStatement = 14
    RULE_conditionalStatement = 15
    RULE_ifStatement = 16
    RULE_unlessStatement = 17
    RULE_functionStatement = 18
    RULE_functionDefinitionStatement = 19
    RULE_functionCallStatement = 20
    RULE_scope = 21
    RULE_jumpStatement = 22
    RULE_bookmarkStatement = 23
    RULE_jumpToStatement = 24
    RULE_moveOp = 25
    RULE_modifyCellOp = 26
    RULE_increaseOp = 27
    RULE_decreaseOp = 28
    RULE_setValOp = 29
    RULE_ioOp = 30
    RULE_parameterOp = 31
    RULE_defParams = 32
    RULE_callParams = 33
    RULE_number = 34
    RULE_lookupOp = 35

    ruleNames =  [ "prog", "stmt", "debugOp", "importStatement", "showTapeBytesOp", 
                   "showTapeValsOp", "setTapeOp", "setTapeCellsOp", "setTapeLengthOp", 
                   "setTapeStringOp", "setVarOp", "loopStatement", "repeatStatement", 
                   "whileStatement", "untilStatement", "conditionalStatement", 
                   "ifStatement", "unlessStatement", "functionStatement", 
                   "functionDefinitionStatement", "functionCallStatement", 
                   "scope", "jumpStatement", "bookmarkStatement", "jumpToStatement", 
                   "moveOp", "modifyCellOp", "increaseOp", "decreaseOp", 
                   "setValOp", "ioOp", "parameterOp", "defParams", "callParams", 
                   "number", "lookupOp" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    MOVE_LEFT_OP=28
    MOVE_RIGHT_OP=29
    MOVE_START_OP=30
    MOVE_END_OP=31
    READ_CHAR_OP=32
    PRINT_CHAR_OP=33
    PRINT_MOVE_CHAR_OP=34
    READ_INT_OP=35
    PRINT_INT_OP=36
    PRINT_MOVE_INT_OP=37
    NUM=38
    STRING=39
    IDENTIFIER=40
    WS=41
    COMMENT=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(asteroideaParser.StmtContext)
            else:
                return self.getTypedRuleContext(asteroideaParser.StmtContext,i)


        def getRuleIndex(self):
            return asteroideaParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = asteroideaParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 1374125096382) != 0:
                self.state = 72
                self.stmt()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def setTapeOp(self):
            return self.getTypedRuleContext(asteroideaParser.SetTapeOpContext,0)


        def moveOp(self):
            return self.getTypedRuleContext(asteroideaParser.MoveOpContext,0)


        def modifyCellOp(self):
            return self.getTypedRuleContext(asteroideaParser.ModifyCellOpContext,0)


        def ioOp(self):
            return self.getTypedRuleContext(asteroideaParser.IoOpContext,0)


        def loopStatement(self):
            return self.getTypedRuleContext(asteroideaParser.LoopStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(asteroideaParser.WhileStatementContext,0)


        def conditionalStatement(self):
            return self.getTypedRuleContext(asteroideaParser.ConditionalStatementContext,0)


        def jumpStatement(self):
            return self.getTypedRuleContext(asteroideaParser.JumpStatementContext,0)


        def functionStatement(self):
            return self.getTypedRuleContext(asteroideaParser.FunctionStatementContext,0)


        def debugOp(self):
            return self.getTypedRuleContext(asteroideaParser.DebugOpContext,0)


        def setVarOp(self):
            return self.getTypedRuleContext(asteroideaParser.SetVarOpContext,0)


        def importStatement(self):
            return self.getTypedRuleContext(asteroideaParser.ImportStatementContext,0)


        def getRuleIndex(self):
            return asteroideaParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = asteroideaParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.setTapeOp()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.moveOp()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 80
                self.modifyCellOp()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 81
                self.ioOp()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 82
                self.loopStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 83
                self.whileStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 84
                self.conditionalStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 85
                self.jumpStatement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 86
                self.functionStatement()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 87
                self.debugOp()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 88
                self.setVarOp()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 89
                self.importStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DebugOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def showTapeBytesOp(self):
            return self.getTypedRuleContext(asteroideaParser.ShowTapeBytesOpContext,0)


        def showTapeValsOp(self):
            return self.getTypedRuleContext(asteroideaParser.ShowTapeValsOpContext,0)


        def getRuleIndex(self):
            return asteroideaParser.RULE_debugOp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDebugOp" ):
                listener.enterDebugOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDebugOp" ):
                listener.exitDebugOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDebugOp" ):
                return visitor.visitDebugOp(self)
            else:
                return visitor.visitChildren(self)




    def debugOp(self):

        localctx = asteroideaParser.DebugOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_debugOp)
        try:
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.showTapeBytesOp()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.showTapeValsOp()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.loc = None # Token

        def STRING(self):
            return self.getToken(asteroideaParser.STRING, 0)

        def getRuleIndex(self):
            return asteroideaParser.RULE_importStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportStatement" ):
                listener.enterImportStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportStatement" ):
                listener.exitImportStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportStatement" ):
                return visitor.visitImportStatement(self)
            else:
                return visitor.visitChildren(self)




    def importStatement(self):

        localctx = asteroideaParser.ImportStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_importStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(asteroideaParser.T__0)
            self.state = 97
            localctx.loc = self.match(asteroideaParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShowTapeBytesOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return asteroideaParser.RULE_showTapeBytesOp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShowTapeBytesOp" ):
                listener.enterShowTapeBytesOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShowTapeBytesOp" ):
                listener.exitShowTapeBytesOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShowTapeBytesOp" ):
                return visitor.visitShowTapeBytesOp(self)
            else:
                return visitor.visitChildren(self)




    def showTapeBytesOp(self):

        localctx = asteroideaParser.ShowTapeBytesOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_showTapeBytesOp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(asteroideaParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShowTapeValsOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return asteroideaParser.RULE_showTapeValsOp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShowTapeValsOp" ):
                listener.enterShowTapeValsOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShowTapeValsOp" ):
                listener.exitShowTapeValsOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShowTapeValsOp" ):
                return visitor.visitShowTapeValsOp(self)
            else:
                return visitor.visitChildren(self)




    def showTapeValsOp(self):

        localctx = asteroideaParser.ShowTapeValsOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_showTapeValsOp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(asteroideaParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SetTapeOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def setTapeStringOp(self):
            return self.getTypedRuleContext(asteroideaParser.SetTapeStringOpContext,0)


        def setTapeCellsOp(self):
            return self.getTypedRuleContext(asteroideaParser.SetTapeCellsOpContext,0)


        def setTapeLengthOp(self):
            return self.getTypedRuleContext(asteroideaParser.SetTapeLengthOpContext,0)


        def getRuleIndex(self):
            return asteroideaParser.RULE_setTapeOp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetTapeOp" ):
                listener.enterSetTapeOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetTapeOp" ):
                listener.exitSetTapeOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSetTapeOp" ):
                return visitor.visitSetTapeOp(self)
            else:
                return visitor.visitChildren(self)




    def setTapeOp(self):

        localctx = asteroideaParser.SetTapeOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_setTapeOp)
        try:
            self.state = 106
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.setTapeStringOp()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.setTapeCellsOp()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 105
                self.setTapeLengthOp()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SetTapeCellsOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(asteroideaParser.NUM)
            else:
                return self.getToken(asteroideaParser.NUM, i)

        def getRuleIndex(self):
            return asteroideaParser.RULE_setTapeCellsOp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetTapeCellsOp" ):
                listener.enterSetTapeCellsOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetTapeCellsOp" ):
                listener.exitSetTapeCellsOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSetTapeCellsOp" ):
                return visitor.visitSetTapeCellsOp(self)
            else:
                return visitor.visitChildren(self)




    def setTapeCellsOp(self):

        localctx = asteroideaParser.SetTapeCellsOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_setTapeCellsOp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(asteroideaParser.T__3)
            self.state = 110 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 109
                self.match(asteroideaParser.NUM)
                self.state = 112 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==38):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SetTapeLengthOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.cells = None # Token
            self.values = None # Token

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(asteroideaParser.NUM)
            else:
                return self.getToken(asteroideaParser.NUM, i)

        def getRuleIndex(self):
            return asteroideaParser.RULE_setTapeLengthOp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetTapeLengthOp" ):
                listener.enterSetTapeLengthOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetTapeLengthOp" ):
                listener.exitSetTapeLengthOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSetTapeLengthOp" ):
                return visitor.visitSetTapeLengthOp(self)
            else:
                return visitor.visitChildren(self)




    def setTapeLengthOp(self):

        localctx = asteroideaParser.SetTapeLengthOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_setTapeLengthOp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(asteroideaParser.T__4)
            self.state = 115
            localctx.cells = self.match(asteroideaParser.NUM)
            self.state = 116
            localctx.values = self.match(asteroideaParser.NUM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SetTapeStringOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.string = None # Token

        def STRING(self):
            return self.getToken(asteroideaParser.STRING, 0)

        def getRuleIndex(self):
            return asteroideaParser.RULE_setTapeStringOp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetTapeStringOp" ):
                listener.enterSetTapeStringOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetTapeStringOp" ):
                listener.exitSetTapeStringOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSetTapeStringOp" ):
                return visitor.visitSetTapeStringOp(self)
            else:
                return visitor.visitChildren(self)




    def setTapeStringOp(self):

        localctx = asteroideaParser.SetTapeStringOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_setTapeStringOp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(asteroideaParser.T__3)
            self.state = 119
            localctx.string = self.match(asteroideaParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SetVarOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.val = None # NumberContext

        def IDENTIFIER(self):
            return self.getToken(asteroideaParser.IDENTIFIER, 0)

        def number(self):
            return self.getTypedRuleContext(asteroideaParser.NumberContext,0)


        def getRuleIndex(self):
            return asteroideaParser.RULE_setVarOp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetVarOp" ):
                listener.enterSetVarOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetVarOp" ):
                listener.exitSetVarOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSetVarOp" ):
                return visitor.visitSetVarOp(self)
            else:
                return visitor.visitChildren(self)




    def setVarOp(self):

        localctx = asteroideaParser.SetVarOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_setVarOp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            localctx.name = self.match(asteroideaParser.IDENTIFIER)
            self.state = 122
            self.match(asteroideaParser.T__5)
            self.state = 123
            localctx.val = self.number()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def repeatStatement(self):
            return self.getTypedRuleContext(asteroideaParser.RepeatStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(asteroideaParser.WhileStatementContext,0)


        def untilStatement(self):
            return self.getTypedRuleContext(asteroideaParser.UntilStatementContext,0)


        def getRuleIndex(self):
            return asteroideaParser.RULE_loopStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoopStatement" ):
                listener.enterLoopStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoopStatement" ):
                listener.exitLoopStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoopStatement" ):
                return visitor.visitLoopStatement(self)
            else:
                return visitor.visitChildren(self)




    def loopStatement(self):

        localctx = asteroideaParser.LoopStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_loopStatement)
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.repeatStatement()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.whileStatement()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 3)
                self.state = 127
                self.untilStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RepeatStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.iterations = None # NumberContext
            self.block = None # ScopeContext

        def number(self):
            return self.getTypedRuleContext(asteroideaParser.NumberContext,0)


        def scope(self):
            return self.getTypedRuleContext(asteroideaParser.ScopeContext,0)


        def getRuleIndex(self):
            return asteroideaParser.RULE_repeatStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRepeatStatement" ):
                listener.enterRepeatStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRepeatStatement" ):
                listener.exitRepeatStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRepeatStatement" ):
                return visitor.visitRepeatStatement(self)
            else:
                return visitor.visitChildren(self)




    def repeatStatement(self):

        localctx = asteroideaParser.RepeatStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_repeatStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(asteroideaParser.T__6)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 131
                self.match(asteroideaParser.T__7)


            self.state = 134
            localctx.iterations = self.number()
            self.state = 135
            self.match(asteroideaParser.T__8)
            self.state = 136
            localctx.block = self.scope()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.block = None # ScopeContext

        def scope(self):
            return self.getTypedRuleContext(asteroideaParser.ScopeContext,0)


        def getRuleIndex(self):
            return asteroideaParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)




    def whileStatement(self):

        localctx = asteroideaParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(asteroideaParser.T__9)
            self.state = 139
            localctx.block = self.scope()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UntilStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.block = None # ScopeContext

        def scope(self):
            return self.getTypedRuleContext(asteroideaParser.ScopeContext,0)


        def getRuleIndex(self):
            return asteroideaParser.RULE_untilStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUntilStatement" ):
                listener.enterUntilStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUntilStatement" ):
                listener.exitUntilStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUntilStatement" ):
                return visitor.visitUntilStatement(self)
            else:
                return visitor.visitChildren(self)




    def untilStatement(self):
